# opencl-wrapper

./: .gitmodules  CMakeLists.txt  README.md  build.py
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  OpenCLWrapper.cpp  OpenCLWrapper.h
